[gd_scene load_steps=7 format=3 uid="uid://dlu817owjdkjq"]

[ext_resource type="Texture2D" uid="uid://dutytu7jhr5nc" path="res://Resources/Textures/PLACEHOLDERS/Scorpion (AxelMode)-cutoutt.png" id="1_f6vud"]
[ext_resource type="Script" path="res://Scripts/Enemy behavior/scorpion.gd" id="1_kehhd"]

[sub_resource type="LabelSettings" id="LabelSettings_0tth2"]
font_size = 12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8onk"]
size = Vector2(25, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfry5"]
size = Vector2(30, 12.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blis6"]
size = Vector2(7, 17)

[node name="Scorpion" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_kehhd")
_wander_speed = null
_health = null
_damage = null
_knockback = null

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -43.0
offset_top = -38.0
offset_right = 53.0
offset_bottom = -15.0
label_settings = SubResource("LabelSettings_0tth2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_f6vud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 5.5)
shape = SubResource("RectangleShape2D_t8onk")

[node name="Detectors" type="Node2D" parent="."]
position = Vector2(-13, 0)

[node name="GapDetectLeft" type="RayCast2D" parent="Detectors"]
position = Vector2(-5, 0)
target_position = Vector2(0, 18)

[node name="GapDetectRight" type="RayCast2D" parent="Detectors"]
position = Vector2(25, 0)
target_position = Vector2(0, 18)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="Top" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -1.6875)
shape = SubResource("RectangleShape2D_bfry5")

[node name="Side" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(12, 13)
shape = SubResource("RectangleShape2D_blis6")

[node name="TookHit" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="TookHit" to="." method="_on_took_hit_timeout"]
